# etc_jupyterlab_telemetry_library

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  etc_jupyterlab_telemetry_library.json  install.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
configuration_example/: jupyter_etc_jupyterlab_telemetry_library_config.py
etc_jupyterlab_telemetry_library/: __init__.py  _version.py  application.py  handlers.py
jupyter-config/nb-config/: etc_jupyterlab_telemetry_library.json
jupyter-config/server-config/: etc_jupyterlab_telemetry_library.json
schema/: plugin.json
src/: config_supplicant.ts  events.ts  handler.ts  index.ts  library.ts  types.ts
