[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["etc_jupyterlab_telemetry_library/labextension/static/style.js"]
ensured-targets = ["etc_jupyterlab_telemetry_library/labextension/static/style.js", "etc_jupyterlab_telemetry_library/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["etc_jupyterlab_telemetry_library/labextension/**", "yarn.lock", ".*", "package-lock.json"]
